<resources>
    <string name="app_name">App Vendas</string>
    <string name="nome">Nome</string>
    <string name="numero">Número</string>
    <string name="salvar">Salvar</string>
    <string name="valorTotal">Valor total: </string>
    <string name="bt_cadCliente">Cadastrar cliente</string>
    <string name="buscaClientes">Buscar</string>
    <string name="bt_listaCliente">Lista de Clientes</string>
    <string name="sair">Sair</string>
    <string name="excluirCliente">Excluir</string>
    <string name="atualizaCliente">Atualizar Cliente</string>
    <string name="cadastraVenda">Cadastrar Venda</string>
    <string name="QuantidadeProduto">Quantidade de produto</string>
    <string name="descricaoProduto">Descrição do produto</string>
    <string name="DataProduto">Data</string>
    <string name="nameExcluir">Excluir venda</string>
    <string name="nameAtualizar">Atualizar venda</string>
    <string name="precoProduto">Preço</string>
</resources>
